added option to disable vcpkg integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
-include(vcpkg.cmake)
+option(USE_VCPKG "USE_VCPG" ON)
+
+if(USE_VCPKG)
+	include(vcpkg.cmake)
+endif()
 
 project(TestVcPkg)
 cmake_minimum_required(VERSION 3.14)
